fix: Horizontal scrollbar

--- a/src/app/output/output.component.scss
+++ b/src/app/output/output.component.scss
@@ -2,7 +2,7 @@
     font-family: "Courier New", monospace;
     font-size: 16px;
     margin: 1rem;
-    overflow-x: scroll;
+    overflow-x: hidden;
     white-space: nowrap;
 
     /*
